@@ -5,7 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
- - 06-03-2006 fixed: cdda disc without cddb info shows only a tracknumber  as label
+ - 06-03-2006 fixed: ms soundtrack directory showed two parent folder items
+ - 06-03-2006 fixed: mem leak in ms soundtrack directory
+ - 06-03-2006 fixed: cdda disc without cddb info shows only a tracknumber as label
  - 06-03-2006 fixed: [1345507] First track of CD Audio not playing on latest XBMC builds!
  - 06-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
  - 06-03-2006 updated: German language file
